--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -9,6 +9,9 @@ body {
 
 .footer {
   background-color: rgb(165, 164, 164);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .password-tooltip {
